src/main/java/com/example/asyncaim/usecase/error/UpdatePendingException.java
package com.example.asyncaim.usecase.error;

public class UpdatePendingException extends BadRequestException {

  public UpdatePendingException() {
    super("update pending");
  }
}
